--- a/style.css
+++ b/style.css
@@ -10,5 +10,14 @@
   border: 2px solid purple;
 }
 
+.table {
+  width: 100%;
+  height: 800px;
+  border-collapse: collapse;
+}
 
+.table tr td {
+  border: 3px solid black;
+  padding: 10px;
+}
 
