image folder that contains the image was added tto the project folder directory, and background image was added to the center of the baord

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@
 }
 
 .center-point {
-  background-color: rgba(165, 42, 42, 0.602);
+  /* background-color: rgba(165, 42, 42, 0.602); */
+  background-image: url(image/dice\ 2.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
